[package]
name = "online_multiplayer"
version = "0.1.0"
edition = "2021"
default-run = "online_multiplayer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alkahest = {version = "0.3.0", features = ["alloc", "derive"]}
rand = "0.8.5"
terminal-menu = "3.0.0"
